<?xml version="1.0" encoding="utf-8"?>
<resources>

     <string name="app_name">Smart Farms</string> 
     <string name="Plant_Activity">Plantation</string> 
    <string name="Home">Home</string> 
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash">SmartFarms</string>
    <string name="button">Button</string>
     <string name="log">Login</string>
    <string name="regi">Not Registered yet ?</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="conpass">Confirm Password</string>
    <string name="sign">Sign In</string>
    <string name="check1">Remember Me ?</string>
    <string name="img"/>
       
    <string name="crops">Crops</string>
    <string name="activity">Activity</string>
    <string name="reports">Reports</string>
    <string name="land">Land</string>
    <string name="desc0">Map your land and manage it.</string>
    <string name="desc1">Add your crops and manage it.</string>
    <string name="desc2">Keep track of every expense and manage your income.</string>
    <string name="desc3">track your activities and manage them.</string>
    <string name="add1">+</string>
    <string name="icond">Description</string>
    
    
    <string name="title_section1">Plantation</string>
    <string name="title_section2">Harvest</string>
    <string name="title_section3">Sales</string>
    <string name="title_section4">Others</string>
    <string name="desc">Description</string>
    <string name="icondes">Icons</string>
    <string name="title_activity_harvest">Harvest</string>
    <string name="add">Add</string>
    <string name="setDefault">Default Land</string>
    
    <string name="datewise">Date</string>
    <string name="cropwise">Crop</string>
    
    
    <string name="sales">Sales Info</string>
    <string name="date">Date</string>
    <string name="qty">Quantity</string>
    <string name="income">Income</string>
    <string name="expences">Expences</string>
    <string name="title_activity_plantation">Plantation</string>
    <string name="amt">Expenses</string>
    <string name="labours">No. of Labourers</string>
    <string name="plant">Plantation Details</string>
    <string name="harvest">Harvest Details</string>
    <string name="title_activity_others">Others</string>
    <string name="others">Other Details</string>
    <string name="title_activity_show_date1">ShowDate1</string>
    <string name="lname">Land Name</string>
    <string name="addr">Address</string>
    <string name="area">Area Of Land (Square meters)</string>
    <string name="map">Map your land</string>
    <string name="save">Save</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    
    <string name="vh">View All</string>
    
    
    <string name="netincome">Net Income</string>
   <string name="decision">Exit ?</string>
   <string name="decision1">Delete ?</string>
   <string name="decision2">Set Default Land</string>
   
   <string name="positive_button">Cancel</string>
   <string name="negative_button">Ok</string>
   
   <string name="positive_button1">Ok</string>
   <string name="negative_button1">Cancel</string>
   
   
   <string name="btn_view">View All</string>
   <string name="category">Category</string>
   <string name="other">Other</string>
   <string name="reg">Register</string>
   <string name="defaultLand">Default Land</string>
   <string name="set">Set as default</string>
   <string name="setdefland">Set as default land</string>
   <string name="landnm">Land Name</string>
   <string name="loc">Location</string>
   <string name="Area">Area</string>
 </resources>
