<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10" >

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:ems="15"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:ems="15"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:ems="15"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:ems="15"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/cpassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:ems="15"
        android:hint="@string/conpass"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="#63C964"
        android:ems="13"
        android:gravity="center"
        android:text="@string/sign"
        android:textColor="#fff" />

</LinearLayout>