<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp" >

            <ImageView
                android:contentDescription="@string/desc"
                android:id="@+id/addImageOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:src="@drawable/a" />

            <TextView
                android:id="@+id/OthersCropName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/c" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/category"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/b" />

            <Spinner
                android:id="@+id/spinner_category_others"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/spinner_background" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/TextView3"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/other"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/b" />

            <EditText
                android:id="@+id/otherdetails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordertext"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/TextView4"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/b" />

            <EditText
                android:id="@+id/otdate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/datestyle"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/TextView6"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/amt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/b" />

            <EditText
                android:id="@+id/amount_others"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordertext"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:weightSum="2" >

            <Button
                android:id="@+id/btnSaveOthers"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#63C964"
                android:text="@string/save"
                android:textColor="@color/w" />

            <Button
                android:id="@+id/btnViewOthers"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#63C964"
                android:text="@string/btn_view"
                android:textColor="@color/w" />
        </TableRow>
    </TableLayout>

</ScrollView>