<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/fland"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal"
        android:weightSum="4" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:src="@drawable/a" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/land"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FF3300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:text="@string/desc0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/b" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/line" />

    <LinearLayout
        android:id="@+id/crop1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal"
        android:weightSum="4" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/crops"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FF3300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:text="@string/desc1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/b" />
        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:src="@drawable/b" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/line" />

    <LinearLayout
        android:id="@+id/factivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal"
        android:weightSum="4" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:src="@drawable/c" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/activity"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FF3300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:text="@string/desc2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/b" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/line" />

    <LinearLayout
        android:id="@+id/reports1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/reports"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FF3300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:text="@string/desc3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/b" />
        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:src="@drawable/d" />
    </LinearLayout>

</LinearLayout>